Arregle rutas de direccionamient
Cambie las rutas de las paginas que se pueden acceder con click

--- a/styles/styles.module.css
+++ b/styles/styles.module.css
@@ -59,10 +59,14 @@ About ME STarts
 
 .aboutMeCV{
     display: flex;
+    align-items: center;
     gap: 10px;
     color:#5fb8b2;
     font-weight: 700;
+    width: min-content;
+    
 }
+
 
 
 /**
